# AutoDoc

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
common/ai/: __init__.py  provider.py
common/config/: __init__.py  settings.py
common/models/: __init__.py  base.py  schemas.py  tables.py
common/utils/: logging.py
config/: default.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/pages/: JobDetailPage.jsx  JobsPage.jsx  MappingsPage.jsx  RepoDetailPage.jsx  ReposPage.jsx  SettingsPage.jsx
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_notion_support.py
services/api-gateway/: Dockerfile  main.py
services/atlassian-sync/: Dockerfile  confluence_client.py  jira_client.py  main.py  page_mapper.py
services/doc-processor/: Dockerfile  analyzer.py  celery_app.py  generator.py  merger.py  tasks.py
services/doc-sync/: Dockerfile  confluence_client.py  jira_client.py  main.py  notion_provider.py  page_mapper.py  sync_provider.py
services/github-webhook/: Dockerfile  main.py  repo_fetcher.py  webhook_handler.py
tests/: conftest.py
tests/test_api_gateway/: test_repositories.py
tests/test_atlassian_sync/: test_page_mapper.py
tests/test_doc_processor/: test_analyzer.py  test_merger.py
tests/test_doc_sync/: test_main.py  test_notion_client.py  test_sync_provider.py
tests/test_github_webhook/: test_webhook_handler.py
(+6 files in other folders)
